[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/GameManagerSingleton/GameManagerSingleton.gd" type="Script" id=1]

[node name="GameManagerSingleton" type="Node2D" groups=["GameManager"]]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ChangeWorldTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ChangeWorldTimer" to="." method="_on_ChangeWorldTimer_timeout"]
